--- a/working_timers/public/index.html
+++ b/working_timers/public/index.html
@@ -8,9 +8,8 @@
     <script async src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.10/pwacompat.min.js"
     integrity="sha384-I1iiXcTSM6j2xczpDckV+qhhbqiip6FyD6R5CpuqNaWXvyDUvXN5ZhIiyLQ7uuTh"
     crossorigin="anonymous"></script>
-    <link rel="apple-touch-icon" href="./icons/icon-192x192.png">
     <meta name="apple-mobile-web-app-title" content="WorkingTimers">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="apple-touch-icon" href="./icon-192x192.png">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
