--- a/working_timers/public/index.html
+++ b/working_timers/public/index.html
@@ -5,11 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="manifest" href="./manifest.json" />
-    <script async src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.10/pwacompat.min.js"
-    integrity="sha384-I1iiXcTSM6j2xczpDckV+qhhbqiip6FyD6R5CpuqNaWXvyDUvXN5ZhIiyLQ7uuTh"
-    crossorigin="anonymous"></script>
     <meta name="apple-mobile-web-app-title" content="WorkingTimers">
-    <link rel="apple-touch-icon" href="./icon-152x152.png">
+    <link rel="apple-touch-icon" href="icon-152x152.png">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
