--- a/working_timers/public/index.html
+++ b/working_timers/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="manifest" href="./manifest.json" />
     <meta name="apple-mobile-web-app-title" content="WorkingTimers">
-    <link rel="apple-touch-icon" href="icon-152x152.png">
+    <link rel="apple-touch-icon" href="icon-192.png">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
