--- a/working_timers/public/index.html
+++ b/working_timers/public/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="manifest" href="./manifest.json" />
+    <script>
+      // service workerが有効なら、service-worker.js を登録します
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('./serviceWorker.js').then(() => { console.log('Service Worker Registered'); });
+      }
+    </script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
