--- a/working_timers/public/index.html
+++ b/working_timers/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="manifest" href="./manifest.json" />
-    <meta name="apple-mobile-web-app-title" content="WorkingTimers">
+    <meta name="apple-mobile-web-app-title" content="WorkingTimer">
     <link rel="apple-touch-icon" href="./icon-192.png" sizes="192x192">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
